flg66, 67 upload, gallery select fix on mobile
also removing old meta banners

--- a/styles/gallery-styles/christmas23.css
+++ b/styles/gallery-styles/christmas23.css
@@ -30,7 +30,7 @@
 .christmas23-title {
     font-family: var(--christmas23-font-fam);
     font-weight: 400;
-    font-size: 10rem;
+    font-size: 4.5rem;
     color: var(--christmas23-col-pri);
 
     line-height: 4.5rem;
@@ -38,7 +38,7 @@
 }
     @media (min-width: 687px) {
         .christmas23-title {
-            font-size: 5rem;
+            font-size: 10rem;
 
         }
     }
